<?xml version="1.0"?>
<package format="2">
  <name>lexus_description</name>
  <version>0.1.0</version>
  <description>The lexus_description package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>pacmod3</exec_depend> --> <!-- not released for the Foxy yet -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
