<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lexus_description</name>
  <version>0.1.0</version>
  <description>The lexus_description package</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
